--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,24 @@
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_password" translatable="false"> Invalid Password </string>
+    <string name="username_required" translatable="false"> Username is required. </string>
+    <string name="incorrect_username_or_password" translatable="false">Incorrect Username or Password</string>
     <string name="login_failed">"Login failed"</string>
     <string name="open_db_manager">Open DB Manager</string>
     <string name='Q_reportingdate'>Reporting Date</string>
     <string name='Q_reportingyear'>reportingyear</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username" translatable="false"> Username </string>
+    <string name="password" translatable="false">Password</string>
+    <string name="newPassword" translatable="false">New Password</string>
+    <string name="confirmPassword" translatable="false">Confirm Password</string>
+    <string name="btnResetPassword" translatable="false">Reset Password</string>
+    <string name="upd_db_error" translatable="false"> Updating Database… ERROR! </string>
+    <string name="options" translatable="false">Options</string>
+    <string name="action_database" translatable="false">Database Manager</string>
+    <string name="action_data_sync" translatable="false">Sync Data</string>
 
 
     <string name="healthfacilityinformation_mainheading">HEALTH FACILITY INFORMATION: </string>
